Bug 107742 - Message receiver generation should work in terms of MessageReceiver objects
Summary: Message receiver generation should work in terms of MessageReceiver objects
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Anders Carlsson
URL:
Keywords:
Depends on: 107787
Blocks: 107760
  Show dependency treegraph
 
Reported: 2013-01-23 14:50 PST by Anders Carlsson
Modified: 2013-01-23 23:27 PST (History)
12 users (show)

See Also:


Attachments
Patch (49.85 KB, patch)
2013-01-23 14:54 PST, Anders Carlsson
bdakin: review+
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Anders Carlsson 2013-01-23 14:50:58 PST
Message receiver generation should work in terms of MessageReceiver objects
Comment 1 Anders Carlsson 2013-01-23 14:54:14 PST
Created attachment 184318 [details]
Patch
Comment 2 Anders Carlsson 2013-01-23 15:09:42 PST
Committed r140605: <http://trac.webkit.org/changeset/140605>
Comment 3 Csaba Osztrogonác 2013-01-23 15:41:31 PST
It broke the Qt WK2 build:
generated/CoordinatedLayerTreeHostProxyMessageReceiver.cpp:57:129: error: no 'void WebKit::CoordinatedLayerTreeHostProxy::didReceiveMessage(CoreIPC::Connection*, CoreIPC::MessageID, CoreIPC::MessageDecoder&)' member function declared in class 'WebKit::CoordinatedLayerTreeHostProxy'
generated/CoordinatedLayerTreeHostMessageReceiver.cpp:40:124: error: no 'void WebKit::CoordinatedLayerTreeHost::didReceiveMessage(CoreIPC::Connection*, CoreIPC::MessageID, CoreIPC::MessageDecoder&)' member function declared in class 'WebKit::CoordinatedLayerTreeHost'

cc Qt guys to fix it.
Comment 4 Hajime Morrita 2013-01-23 17:25:08 PST
Same for my local mac-wk2. Needs clobber build?

CompileC WebKeyValueStorageManagerMessageReceiver.o
/Users/morrita/work/webkit/alice/WebKitBuild/Debug/DerivedSources/WebKit2/WebKeyValueStorageManagerMessageReceiver.cpp:36:33: error: out-of-line definition of 'didReceiveWebKeyValueStorageManagerMessage' does not match any declaration in 'WebKit::WebKeyValueStorageManager'
void WebKeyValueStorageManager::didReceiveWebKeyValueStorageManagerMessage(CoreIPC::Connection*, CoreIPC::MessageID, CoreIPC::MessageDecoder& decoder)
1 error generated.
Comment 5 Gyuyoung Kim 2013-01-23 22:44:15 PST
I file Bug 107788 to fix build break on other ports. Could you take a look it ?
Comment 6 Seokju Kwon 2013-01-23 23:27:15 PST
Fix build break on efl with r140656 (Bug 107787)